css/styles.css
a {
  color: #e5e7eb;
  text-decoration: none;
}

.header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: #1f2937;
}

.header-logo {
  font-size: 24px;
  color: #f9faf8;
}

.header-links {
  display: flex;
  font-size: 18px;
  padding: 16px;
  gap: 16px;
}

.content-title {
  display: flex;
  align-items: center;
  background-color: #1f2937;
  justify-content: center;
}

.content-title h3 {
  color: #f9faf8;
  font-weight: extra-bold;
  font-size: 48px;
}

.content-title p {
  color: #e5e7eb;
  font-size: 18px;
}

.content-title-left,
.content-title-right {
  width: 300px;
}

